--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "i": "^0.3.6",
     "jss": "^10.0.0-alpha.16",
     "npm": "^6.9.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
