--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "3788996.github.io",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ItsThatBlackKid.github.io/3788996.github.io",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^3.9.2",
     "@material-ui/styles": "^3.0.0-alpha.10",
+    "gh-pages": "^2.0.1",
     "i": "^0.3.6",
     "jss": "^10.0.0-alpha.16",
     "npm": "^6.9.0",
@@ -21,6 +23,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
