--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "3788996.github.io",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ItsThatBlackKid.github.io/3788996",
+  "homepage": "https://swamp-of-shrek.github.io/swampofshrek",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
